# logbox

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: feature_toggle.h.cmake
src/core/: context.cc  context.h  format.cc  log_severity.cc  logging.cc  logging_event.cc  logging_event.h  sink.h  sink_control.cc  sink_control.h
src/include/logbox/: feature_toggle.h  format.h  log_severity.h  log_stream.h  logging.h
src/sink/: console_sink.cc  console_sink.h  rolling_file_sink.cc  rolling_file_sink.h
src/util/: environment.h  environment_posix.cc  posix_error.cc  posix_error.h  slice.h  timestamp.cc  timestamp.h  writable_file.cc  writable_file.h
test/: CMakeLists.txt  environment_test.cc  posix_error_test.cc  slice_test.cc  timestamp_test.cc
